[package]
name = "cloudflare-worker-aks"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "A Cloudflare worker for querying Azure Kubernetes Service (AKS) information."
repository = "https://github.com/dbalcomb/cloudflare-worker-aks"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
aks-cluster-suffix = { git = "https://github.com/dbalcomb/aks-cluster-suffix", rev = "9060487085377e5df975589d8d658b69ce9bc732" }
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
